@@ -1,5 +1,7 @@
 *SVN*
 
+* Add a "capture" helper, for capturing the stdout of a remote command and returning it as a string [Jamis Buck]
+
 * Add a "get" helper, to pull a file from a remote server to the localhost [bmihelac]
 
 * Fix gateway to actually increment local_port if a port is in use, so that multiple capistrano instances can run at the same time [Mark Imbriaco]
